hard-gists/3695458/run.log
=== Docker Run Log for 3695458 ===
Started at: Mi 29. Okt 13:56:39 CET 2025

[2025-10-29 13:56:40] START: Running container for 3695458
[2025-10-29 13:56:40] SUCCESS: Container 19c185e564133804868813d9e8323b614ce950d117cc8cfd73fd2c7220a15571 started for 3695458
=== Container logs for 3695458 ===
  File "/snippet.py", line 47
    print json.dumps(scores, indent=4)
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 3695458 ===
[2025-10-29 13:56:42] INFO: Container 19c185e564133804868813d9e8323b614ce950d117cc8cfd73fd2c7220a15571 has stopped
